# massiv-benchmarks

accelerate-bench/: ChangeLog.md  README.md  accelerate-bench.cabal  stack.yaml
accelerate-bench/bench/: Mult.hs  Sobel.hs  Vector.hs
accelerate-bench/src/Data/Massiv/Bench/Accelerate/: Matrix.hs  Vector.hs
async-bench/: .gitignore  async-bench.cabal  stack.yaml
async-bench/bench/: Map.hs
hmatrix-bench/: hmatrix-bench.cabal  stack-ghc-8.4.yaml  stack-ghc-8.6.yaml
hmatrix-bench/bench/: Mult.hs  Vector.hs
hmatrix-bench/src/Data/Massiv/Bench/HMatrix/: Matrix.hs  Vector.hs
repa-bench/: repa-bench.cabal  stack-ghc-8.4.yaml  stack.yaml
repa-bench/bench/: Append.hs  Mult.hs  Sobel.hs  Sum.hs
repa-bench/src/Data/Massiv/Bench/: Repa.hs
repa-bench/src/Data/Massiv/Bench/Repa/: Matrix.hs  Sobel.hs
