name:           repa-bench
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/lehins/repa-bench#readme>
homepage:       https://github.com/lehins/repa-bench#readme
bug-reports:    https://github.com/lehins/repa-bench/issues
author:         Alexey Kuleshevich
maintainer:     alexey@kuleshevi.ch
copyright:      2018 Alexey Kuleshevich
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/lehins/massiv-benchmarks

library
  hs-source-dirs:      src
  exposed-modules:     Data.Massiv.Bench.Repa
                     , Data.Massiv.Bench.Repa.Sobel
  build-depends:       base >=4.7 && <5
                     , repa
                     , deepseq
                     , massiv-bench
  default-language:    Haskell2010
  ghc-options:         -Wall

benchmark mult
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Mult.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , repa
                     , repa-algorithms
                     , repa-bench
                     , criterion
                     , deepseq
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010

benchmark sobel
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Sobel.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , repa
                     , repa-algorithms
                     , repa-bench
                     , criterion
                     , deepseq
                     , massiv
                     , massiv-bench
  default-language:    Haskell2010
